# python-lib25519

./: README.md  lib25519.py  pyproject.toml
autogen/: init  lib
src/: lib25519.py
src/lib25519/: __init__.py  _lib.py  dh.py  sign.py
tests/: ed25519.py  test_ed25519.py  test_x25519.py  x25519.py
