[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'lib25519'
version = '0.0.1'
description = 'Python wrapper around implementation of the X25519 and Ed25519 cryptosystems'
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Jan Mojžíš", email = "jan.mojzis@gmail.com"},
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
